name:                ergvein-index-server
version:             0.1.0.0
synopsis:            Ergvein wallet cryptocurrencies index server
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Index.Server.App
    Ergvein.Index.Server.BlockchainScanning.Bitcoin
    Ergvein.Index.Server.BlockchainScanning.Common
    Ergvein.Index.Server.BlockchainScanning.Ergo
    Ergvein.Index.Server.BlockchainScanning.Types
    Ergvein.Index.Server.Cache
    Ergvein.Index.Server.Cache.Monad
    Ergvein.Index.Server.Cache.Queries
    Ergvein.Index.Server.Cache.Schema
    Ergvein.Index.Server.Config
    Ergvein.Index.Server.DB.Drv
    Ergvein.Index.Server.DB.Monad
    Ergvein.Index.Server.DB.Queries
    Ergvein.Index.Server.DB.Schema
    Ergvein.Index.Server.Environment
    Ergvein.Index.Server.Monad
    Ergvein.Index.Server.Server
    Ergvein.Index.Server.Server.V1
    Ergvein.Index.Server.Utils

  build-depends:
        base                     >= 4.7     &&  < 4.13
      , aeson                    >= 1.4     &&  < 1.5
      , base16-bytestring        >= 0.1     &&  < 0.2
      , bitcoin-api              == 0.12.1
      , bitcoin-block            >= 0.13    &&  < 0.14
      , bytestring               >= 0.10    &&  < 0.11
      , cereal                   >= 0.5     &&  < 0.6
      , conduit                  >= 1.3     &&  < 1.4
      , containers               >= 0.6     &&  < 0.7
      , conversion               >= 1.2     &&  < 1.3
      , data-default             >= 0.7     &&  < 0.8
      , directory                >= 1.3     &&  < 1.4
      , esqueleto                >= 2.0     &&  < 3.0
      , exceptions               >= 0.10    &&  < 0.11 
      , filepath                 >= 1.4     &&  < 1.5
      , flat                     >= 0.3     &&  < 0.4
      , haskoin-core             >= 0.8     &&  < 0.9
      , hexstring                >= 0.11    &&  < 0.12
      , ilist                    >= 0.3     &&  < 0.4
      , immortal                 >= 0.3     &&  < 0.4
      , lens                     >= 4.17    &&  < 4.18
      , leveldb-haskell          >= 0.6     &&  < 0.7
      , monad-extras             >= 0.6     &&  < 0.7
      , monad-logger             >= 0.3     &&  < 0.4
      , mtl                      >= 2.2     &&  < 2.3
      , persistent               >= 2.9     &&  < 3.0
      , persistent-pagination    >= 0.1     &&  < 0.2
      , persistent-postgresql    >= 2.9     &&  < 2.10
      , persistent-template      >= 2.5     &&  < 2.6
      , resource-pool            >= 0.2     &&  < 0.3
      , resourcet                >= 1.2     &&  < 1.3
      , safe                     >= 0.3     &&  < 0.4
      , servant                  >= 0.16    &&  < 0.17
      , servant-server           >= 0.16    &&  < 0.17
      , template-haskell         >= 2.14    &&  < 2.15
      , text                     >= 1.2     &&  < 1.3
      , time                     >= 1.8     &&  < 1.9
      , unliftio-core            >= 0.1     &&  < 0.2
      , utf8-string              >= 1.0     &&  < 1.1
      , wai                      >= 3.2     &&  < 3.3
      , wai-cors                 >= 0.2     &&  < 0.3
      , wai-extra                >= 3.0     &&  < 3.1
      , yaml                     >= 0.11    &&  < 0.12

      , ergo-api
      , ergvein-common
      , ergvein-crypto
      , ergvein-index-api
      , ergvein-interface-ergo
      , ergvein-wallet-filters
      , ergvein-wallet-types

  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    DuplicateRecordFields

executable ergvein-index-server
  hs-source-dirs:
      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts  "-with-rtsopts= -N -A64m -AL256m -qn4"
  build-depends:
      base
    , bitcoin-api
    , immortal
    , monad-logger
    , optparse-applicative      >= 0.14 && <0.15
    , servant
    , servant-server
    , text
    , unliftio-core
    , wai
    , wai-extra
    , warp

    , ergvein-index-api
    , ergvein-index-server

  default-language:    Haskell2010
  default-extensions:
    RankNTypes
    RecordWildCards
