name:                ergvein-index-server
version:             0.1.0.0
synopsis:            Ergvein wallet cryptocurrencies index server
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>

library
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Index.Server.App
    Ergvein.Index.Server.BlockchainScanning.Bitcoin
    Ergvein.Index.Server.BlockchainScanning.BitcoinApiMonad
    Ergvein.Index.Server.BlockchainScanning.Common
    Ergvein.Index.Server.BlockchainScanning.Ergo
    Ergvein.Index.Server.BlockchainScanning.Types
    Ergvein.Index.Server.Config
    Ergvein.Index.Server.DB
    Ergvein.Index.Server.DB.Conversions
    Ergvein.Index.Server.DB.Monad
    Ergvein.Index.Server.DB.Queries
    Ergvein.Index.Server.DB.Schema
    Ergvein.Index.Server.Dependencies
    Ergvein.Index.Server.Environment
    Ergvein.Index.Server.Monad
    Ergvein.Index.Server.PeerDiscovery.Discovery
    Ergvein.Index.Server.PeerDiscovery.Types
    Ergvein.Index.Server.Server
    Ergvein.Index.Server.Server.V1
    Ergvein.Index.Server.Utils
    Ergvein.Index.Server.TCPService.Server
    Ergvein.Index.Server.TCPService.MessageHandler
    Ergvein.Index.Server.TCPService.Socket

  build-depends:
        base                     >= 4.7     &&  < 4.13
      , aeson                    >= 1.4     &&  < 1.5
      , async                    >= 2.2     &&  < 2.3
      , base16-bytestring        >= 0.1     &&  < 0.2
      , bitcoin-api              == 0.13.*
      , bitcoin-block            >= 0.13    &&  < 0.14
      , byte-order               >= 0.1     &&  < 0.2
      , bytestring               >= 0.10    &&  < 0.11
      , cereal                   >= 0.5     &&  < 0.6
      , conduit                  >= 1.3     &&  < 1.4
      , connection               >= 0.3     &&  < 0.4
      , containers               >= 0.6     &&  < 0.7
      , conversion               >= 1.2     &&  < 1.3
      , cryptohash               >= 0.11    &&  < 0.12
      , data-default             >= 0.7     &&  < 0.8
      , directory                >= 1.3     &&  < 1.4
      , either                   >= 5.0     &&  < 5.1
      , exceptions               >= 0.10    &&  < 0.11
      , file-embed               >= 0.0.11  &&  < 0.0.12
      , filepath                 >= 1.4     &&  < 1.5
      , flat                     >= 0.3     &&  < 0.4
      , hashable                 >= 1.2     &&  < 1.3
      , haskoin-core             >= 0.12.0  &&  < 0.12.1
      , hexstring                >= 0.11    &&  < 0.12
      , http-client              >= 0.6     &&  < 0.7
      , http-client-tls          >= 0.3     &&  < 0.4
      , ilist                    >= 0.3     &&  < 0.4
      , immortal                 >= 0.3     &&  < 0.4
      , lens                     >= 4.17    &&  < 4.18
      , leveldb-haskell          >= 0.6     &&  < 0.7
      , monad-extras             >= 0.6     &&  < 0.7
      , monad-logger             >= 0.3     &&  < 0.4
      , mtl                      >= 2.2     &&  < 2.3
      , resource-pool            >= 0.2     &&  < 0.3
      , resourcet                >= 1.2     &&  < 1.3
      , safe                     >= 0.3     &&  < 0.4
      , servant                  >= 0.16    &&  < 0.17
      , servant-client           >= 0.16    &&  < 0.17
      , servant-client-core      >= 0.16    &&  < 0.17
      , servant-server           >= 0.16    &&  < 0.17
      , stm                      >= 2.5     &&  < 2.6
      , template-haskell         >= 2.14    &&  < 2.15
      , text                     >= 1.2     &&  < 1.3
      , time                     >= 1.8     &&  < 1.9
      , tls                      >= 1.4     &&  < 1.5
      , transformers             >= 0.5     &&  < 0.6
      , unix                     >= 2.7     &&  < 2.8
      , unliftio-core            >= 0.1     &&  < 0.2
      , unordered-containers     >= 0.2     &&  < 0.3
      , utf8-string              >= 1.0     &&  < 1.1
      , wai                      >= 3.2     &&  < 3.3
      , wai-cors                 >= 0.2     &&  < 0.3
      , wai-extra                >= 3.0     &&  < 3.1
      , warp                     >= 3.2     &&  < 3.3
      , yaml                     >= 0.11    &&  < 0.12
      , network
      , attoparsec
      , attoparsec-binary
      , binary
      , ergo-api
      , ergvein-common
      , ergvein-crypto
      , ergvein-index-api
      , ergvein-index-client
      , ergvein-interface-ergo
      , ergvein-wallet-filters
      , ergvein-wallet-types
      , ergvein-index-protocol
      , ergvein-index-protocol-client

  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    DuplicateRecordFields
    QuantifiedConstraints
    UndecidableInstances
    LambdaCase

executable ergvein-index-server
  hs-source-dirs:
      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts  "-with-rtsopts= -N -A64m -AL256m -qn4 -I0"
  build-depends:
      base
    , bitcoin-api
    , immortal
    , monad-logger
    , optparse-applicative      >= 0.14 && <0.15
    , servant
    , servant-server
    , text
    , unliftio-core
    , wai
    , wai-extra
    , warp
    , time


    , ergvein-index-api
    , ergvein-index-server

  default-language:    Haskell2010
  default-extensions:
    RankNTypes
    RecordWildCards
