name:                ergvein-index-server
version:             0.1.0.0
synopsis:            Ergvein wallet cryptocurrencies index server
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Index.Server.App
    Ergvein.Index.Server.Bitcoin.API
    Ergvein.Index.Server.Bitcoin.Scanner
    Ergvein.Index.Server.Config
    Ergvein.Index.Server.DB.Monad
    Ergvein.Index.Server.DB.Queries
    Ergvein.Index.Server.DB.Queries.Peers
    Ergvein.Index.Server.DB.Serialize
    Ergvein.Index.Server.Metrics
    Ergvein.Index.Server.Monad
    Ergvein.Index.Server.Monad.Class
    Ergvein.Index.Server.Monad.Env
    Ergvein.Index.Server.Monad.Impl
    Ergvein.Index.Server.Monad.Utils
    Ergvein.Index.Server.PeerDiscovery
    Ergvein.Index.Server.Scanner
    Ergvein.Index.Server.TCPService.Conversions
    Ergvein.Index.Server.TCPService.MessageHandler
    Ergvein.Index.Server.TCPService.Server
    Ergvein.Index.Server.Types
    Ergvein.Index.Server.Utils
    Ergvein.Index.Server.Worker.Fees
    Ergvein.Index.Server.Worker.Rates
    Ergvein.Socket.Base
    Ergvein.Socket.BTC
    Ergvein.Socket.Supervisor
  build-depends:
        base                     >= 4.7     &&  < 4.13
      , aeson                    >= 1.4     &&  < 1.5
      , async                    >= 2.2     &&  < 2.3
      , attoparsec
      , attoparsec-binary
      , base16-bytestring        >= 0.1     &&  < 0.2
      , binary
      , bitcoin-api              == 0.13.*
      , bitcoin-block            >= 0.13    &&  < 0.14
      , byte-order               >= 0.1     &&  < 0.2
      , bytestring               >= 0.10    &&  < 0.11
      , cereal                   >= 0.5     &&  < 0.6
      , conduit                  >= 1.3     &&  < 1.4
      , connection               >= 0.3     &&  < 0.4
      , containers               >= 0.6     &&  < 0.7
      , conversion               >= 1.2     &&  < 1.3
      , cryptonite
      , data-default             >= 0.7     &&  < 0.8
      , deepseq                  >= 1.4     &&  < 1.5
      , directory                >= 1.3     &&  < 1.4
      , disk-free-space          >= 0.1     &&  < 0.2
      , either                   >= 5.0     &&  < 5.1
      , exceptions               >= 0.10    &&  < 0.11
      , file-embed               >= 0.0.11  &&  < 0.0.12
      , filepath                 >= 1.4     &&  < 1.5
      , hashable                 >= 1.2     &&  < 1.3
      , haskoin-core             >= 0.12.0  &&  < 0.12.1
      , hexstring                >= 0.11    &&  < 0.12
      , http-client              >= 0.6     &&  < 0.7
      , http-client-tls          >= 0.3     &&  < 0.4
      , http-types               >= 0.12    &&  < 0.13
      , ilist                    >= 0.3     &&  < 0.4
      , immortal                 >= 0.3     &&  < 0.4
      , immortal-worker          >= 0.1     &&  < 0.2
      , lens                     >= 4.17    &&  < 4.18
      , leveldb-haskell          >= 0.6     &&  < 0.7
      , lifted-async             >= 0.10    &&  < 0.11
      , lifted-base              >= 0.2     &&  < 0.3
      , memory                   >= 0.14    &&  < 0.16
      , monad-control            >= 1.0     &&  < 1.1
      , monad-extras             >= 0.6     &&  < 0.7
      , monad-logger             >= 0.3     &&  < 0.4
      , MonadRandom
      , mtl                      >= 2.2     &&  < 2.3
      , network                  >= 2.8     &&  < 2.9
      , parallel                 >= 3.2     &&  < 3.3
      , prometheus-client        >= 1.0     &&  < 1.1
      , prometheus-metrics-ghc   >= 1.0     &&  < 1.1
      , resource-pool            >= 0.2     &&  < 0.3
      , resourcet                >= 1.2     &&  < 1.3
      , rocksdb-haskell-jprupp   >= 2.1     && < 2.2
      , safe                     >= 0.3     &&  < 0.4
      , safe-exceptions
      , stm                      >= 2.5     &&  < 2.6
      , template-haskell         >= 2.14    &&  < 2.15
      , text                     >= 1.2     &&  < 1.3
      , time                     >= 1.8     &&  < 1.9
      , tls                      >= 1.4     &&  < 1.5
      , transformers             >= 0.5     &&  < 0.6
      , transformers-base        >= 0.4     &&  < 0.5
      , unix                     >= 2.7     &&  < 2.8
      , unliftio-core            >= 0.1     &&  < 0.2
      , unliftio                 >= 0.2     &&  < 0.3
      , unordered-containers     >= 0.2     &&  < 0.3
      , utf8-string              >= 1.0     &&  < 1.1
      , vector
      , wai                      >= 3.2     &&  < 3.3
      , wai-cors                 >= 0.2     &&  < 0.3
      , wai-extra                >= 3.0     &&  < 3.1
      , wai-middleware-prometheus >= 1.0    &&  < 1.1
      , warp                     >= 3.2     &&  < 3.3
      , yaml                     >= 0.11    &&  < 0.12
      , coinbase-client
      , ergo-api
      , ergvein-common
      , ergvein-crypto
      , ergvein-index-api
      , ergvein-index-client
      , ergvein-index-protocol
      , ergvein-index-protocol-client
      , ergvein-interface-ergo
      , ergvein-wallet-filters
      , ergvein-wallet-types

      , flat
      , persist
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    DuplicateRecordFields
    QuantifiedConstraints
    UndecidableInstances
    LambdaCase

executable ergvein-index-server
  hs-source-dirs:
      app
  main-is:             Main.hs
  -- ghc-options:         -threaded -rtsopts -O2 "-with-rtsopts= -N"
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts= -N -A64m -AL256m -I0 -T"
  build-depends:
      base
    , bitcoin-api              == 0.13.*
    , ergvein-index-server
    , immortal
    , monad-logger
    , optparse-applicative     >= 0.14 && <0.15
    , text
    , time

  default-language:    Haskell2010
  default-extensions:
    RankNTypes
    RecordWildCards

-- test-suite ergvein-index-server-test
--   type: exitcode-stdio-1.0
--   Default-language: Haskell2010
--   hs-source-dirs: tests
--   main-is: TestMain.hs
--   exposed-modules:
--     Test.Generators
--     Test.Persist
--   other-modules:
--     Test.Generators
--     Test.Persist
--   build-depends:
--       base
--     , attoparsec
--     , attoparsec-binary
--     , bytestring
--     , QuickCheck
--     , quickcheck-instances
--     , vector
--     , ergvein-index-server
--     , ergvein-wallet-types
--     , deepseq                  >= 1.4     &&  < 1.5
--     , parallel                 >= 3.2     &&  < 3.3
--     , haskoin-core             >= 0.12.0  &&  < 0.12.1
--     , cereal
--     , persist
--     , cryptonite
--   default-extensions:
--     RecordWildCards
--     OverloadedStrings
--     TypeApplications

executable ergvein-index-foo
  hs-source-dirs:
      app
  main-is:             Test.hs
  -- ghc-options:         -threaded -rtsopts -O2 "-with-rtsopts= -N -G1 -I0"
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts= -N -A64m -AL256m -I0 -T"
  build-depends:
      base                     >= 4.7     &&  < 4.13
    , aeson                    >= 1.4     &&  < 1.5
    , async                    >= 2.2     &&  < 2.3
    , attoparsec
    , attoparsec-binary
    , base16-bytestring        >= 0.1     &&  < 0.2
    , binary
    , bitcoin-api              == 0.13.*
    , bitcoin-block            >= 0.13    &&  < 0.14
    , byte-order               >= 0.1     &&  < 0.2
    , bytestring               >= 0.10    &&  < 0.11
    , cereal                   >= 0.5     &&  < 0.6
    , conduit                  >= 1.3     &&  < 1.4
    , connection               >= 0.3     &&  < 0.4
    , containers               >= 0.6     &&  < 0.7
    , conversion               >= 1.2     &&  < 1.3
    , cryptonite
    , data-default             >= 0.7     &&  < 0.8
    , deepseq                  >= 1.4     &&  < 1.5
    , directory                >= 1.3     &&  < 1.4
    , disk-free-space          >= 0.1     &&  < 0.2
    , either                   >= 5.0     &&  < 5.1
    , exceptions               >= 0.10    &&  < 0.11
    , file-embed               >= 0.0.11  &&  < 0.0.12
    , filepath                 >= 1.4     &&  < 1.5
    , hashable                 >= 1.2     &&  < 1.3
    , haskoin-core             >= 0.12.0  &&  < 0.12.1
    , hexstring                >= 0.11    &&  < 0.12
    , http-client              >= 0.6     &&  < 0.7
    , http-client-tls          >= 0.3     &&  < 0.4
    , http-types               >= 0.12    &&  < 0.13
    , ilist                    >= 0.3     &&  < 0.4
    , immortal                 >= 0.3     &&  < 0.4
    , immortal-worker          >= 0.1     &&  < 0.2
    , lens                     >= 4.17    &&  < 4.18
    , leveldb-haskell          >= 0.6     &&  < 0.7
    , lifted-async             >= 0.10    &&  < 0.11
    , lifted-base              >= 0.2     &&  < 0.3
    , monad-control            >= 1.0     &&  < 1.1
    , monad-extras             >= 0.6     &&  < 0.7
    , monad-logger             >= 0.3     &&  < 0.4
    , MonadRandom
    , mtl                      >= 2.2     &&  < 2.3
    , network                  >= 2.8     &&  < 2.9
    , optparse-applicative
    , parallel                 >= 3.2     &&  < 3.3
    , prometheus-client        >= 1.0     &&  < 1.1
    , prometheus-metrics-ghc   >= 1.0     &&  < 1.1
    , resource-pool            >= 0.2     &&  < 0.3
    , resourcet                >= 1.2     &&  < 1.3
    , safe                     >= 0.3     &&  < 0.4
    , safe-exceptions
    , stm                      >= 2.5     &&  < 2.6
    , template-haskell         >= 2.14    &&  < 2.15
    , text                     >= 1.2     &&  < 1.3
    , time                     >= 1.8     &&  < 1.9
    , tls                      >= 1.4     &&  < 1.5
    , transformers             >= 0.5     &&  < 0.6
    , transformers-base        >= 0.4     &&  < 0.5
    , unix                     >= 2.7     &&  < 2.8
    , unliftio-core            >= 0.1     &&  < 0.2
    , unordered-containers     >= 0.2     &&  < 0.3
    , utf8-string              >= 1.0     &&  < 1.1
    , vector
    , wai                      >= 3.2     &&  < 3.3
    , wai-cors                 >= 0.2     &&  < 0.3
    , wai-extra                >= 3.0     &&  < 3.1
    , wai-middleware-prometheus >= 1.0    &&  < 1.1
    , warp                     >= 3.2     &&  < 3.3
    , yaml                     >= 0.11    &&  < 0.12
    , coinbase-client
    , ergo-api
    , ergvein-common
    , ergvein-crypto
    , ergvein-index-api
    , ergvein-index-client
    , ergvein-index-protocol
    , ergvein-index-protocol-client
    , ergvein-interface-ergo
    , ergvein-wallet-filters
    , ergvein-wallet-types
    , ergvein-index-server
    , rocksdb-haskell-jprupp   >= 2.1     && < 2.2
    , haskoin-core
    , memory
    , persist
    , flat
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    DuplicateRecordFields
    QuantifiedConstraints
    UndecidableInstances
    LambdaCase

executable ergvein-index-server-load-test
  hs-source-dirs:
      load-test-app
  main-is:             Main.hs
  -- ghc-options:         -threaded -rtsopts -O2 "-with-rtsopts= -N -G1 -I0"
  ghc-options:         -O2 -threaded -rtsopts "-with-rtsopts= -N -A64m -AL256m -I0 -T"
  build-depends:
      base
    , bitcoin-api              == 0.13.*
    , ergvein-index-server
    , immortal
    , bytestring
    , network
    , vector
    , monad-logger
    , ergvein-index-protocol
    , optparse-applicative     >= 0.14 && <0.15
    , haskoin-core             >= 0.12.0  &&  < 0.12.1
    , stm                      >= 2.5     &&  < 2.6
    , text
    , time
    , random
    , transformers
    , either

    , exceptions
    , unliftio-core
    , attoparsec
  default-language:    Haskell2010
  default-extensions:
    RankNTypes
    RecordWildCards
    OverloadedStrings
    BlockArguments
    MultiWayIf
