name:                ergvein-node-discovery
version:             0.1.0.0
synopsis:            Ergvein node network constants and common functions
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Aminion <aminion@protonmail.com>

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Node.Constants

  build-depends:
        base         >= 4.7   &&  < 4.13
      , bytestring   >= 0.10  &&  < 0.11
      , containers   >= 0.5   &&  < 0.7
      , dns          >= 4.0   &&  < 5.0
      , iproute      >= 1.7.8 &&  < 1.8
      , listsafe     >= 0.1   &&  < 0.2
      , network      >= 2.8   &&  < 2.9
      , text         >=1.2    &&  < 1.3

      , ergvein-common

  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings

test-suite ergvein-dns-crawling-test
  type: exitcode-stdio-1.0
  Default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestMain.hs
  exposed-modules: Test.Generators
  other-modules: Test.Generators
  build-depends:
      base
  default-extensions:
    OverloadedStrings