name:                ergvein-node-discovery
version:             0.1.0.0
synopsis:            Ergvein node network constants and common functions
description:         See README.md
category:            Cryptocurrency
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Aminion <aminion@protonmail.com>

library
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:
    Ergvein.Node.Constants
    Ergvein.Node.Resolve

  build-depends:
        base              >= 4.7   &&  < 4.13
      , bytestring        >= 0.10  &&  < 0.11
      , containers        >= 0.5   &&  < 0.7
      , dns               >= 4.0   &&  < 5.0
      , iproute           >= 1.7.8 &&  < 1.8
      , listsafe          >= 0.1   &&  < 0.2
      , network           >= 2.8   &&  < 3.2
      , text              >= 1.2   &&  < 1.3
      , attoparsec        >= 0.13  &&  < 0.14
      , attoparsec-binary >= 0.2   &&  < 0.3
      , transformers      >= 0.5   &&  < 0.6
      , ergvein-common

  default-language:    Haskell2010
  default-extensions:
    OverloadedStrings
    TypeApplications
    BlockArguments
    TupleSections
    RecordWildCards

test-suite ergvein-node-discovery-test
  type: exitcode-stdio-1.0
  Default-language: Haskell2010
  hs-source-dirs: tests
  main-is: TestMain.hs
  exposed-modules: Test.Generators
  other-modules: Test.Generators
  build-depends:
      base
    , attoparsec
    , QuickCheck
    , quickcheck-instances
    , text
    , network
    , iproute
    , cereal
    , bytestring
    , ergvein-node-discovery
  default-extensions:
    RecordWildCards
    OverloadedStrings
    TypeApplications
    TypeSynonymInstances