name:                reflex-external-ref
version:             1.0.0.0
synopsis:            External reference with reactivity support
description:         See README.md
category:            Reflex
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.ExternalRef
  build-depends:
      base
    , reflex                    >= 0.4      && < 0.7
    , reflex-dom                >= 0.4      && < 0.7
    , deepseq                   >= 1.4      && < 1.5
  default-language:    Haskell2010
