name:                reflex-external-ref
version:             1.0.3.0
synopsis:            External reference with reactivity support
description:         See README.md
stability:           Experimental
category:            Reflex, FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:
                     - Anton Gushcha
                     - Aminion
                     - Vladimir Krutkin
                     - Levon Oganyan
maintainer:          - Anton Gushcha <ncrashed@gmail.com>
                     - Aminion <>
                     - Vladimir Krutkin <krutkinvs@gmail.com>
                     - Levon Oganyan
bug-reports:         https://github.com/hexresearch/ergvein/issues
homepage:            https://github.com/hexresearch/ergvein

library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.ExternalRef
  build-depends:
      base
    , reflex                    >= 0.4      && < 0.9
    , deepseq                   >= 1.4      && < 1.5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hexresearch/ergvein.git
