name:                reflex-fork
version:             1.0.0.0
synopsis:            Fork threads on fixed capability and use them in reflex
description:         Library provides helpers for forking threads on binded capability and relfex integration.
stability:           Experimental
category:            Reflex, FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019-2021 ATUM SOLUTIONS AG
author:
                     - Anton Gushcha
                     - Aminion
                     - Vladimir Krutkin
                     - Levon Oganyan
maintainer:          - Anton Gushcha <ncrashed@gmail.com>
                     - Aminion <>
                     - Vladimir Krutkin <krutkinvs@gmail.com>
                     - Levon Oganyan <lemarwin42@protonmail.com>
bug-reports:         https://github.com/hexresearch/ergvein/issues
homepage:            https://github.com/hexresearch/ergvein
extra-source-files:
  README.md
  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.Fork
  build-depends:
      base                      >= 4.5      && < 4.15
    , MonadRandom
    , reflex                    >= 0.4      && < 0.9
    , reflex-dom-core
    , unliftio-core
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

source-repository head
  type: git
  location: https://github.com/hexresearch/ergvein
  subdir: reflex-fork
