name:                reflex-localize-dom
version:             1.0.3.0
synopsis:            Helper widgets for reflex-localize
description:         Library provides helpers for dynamic strings that depends on current selected language.
stability:           Experimental
category:            Reflex, FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:
                     - Anton Gushcha
                     - Aminion
                     - Vladimir Krutkin
                     - Levon Oganyan
maintainer:          - Anton Gushcha <ncrashed@gmail.com>
                     - Aminion <>
                     - Vladimir Krutkin <krutkinvs@gmail.com>
                     - Levon Oganyan <lemarwin42@protonmail.com>
bug-reports:         https://github.com/hexresearch/ergvein/issues
homepage:            https://github.com/hexresearch/ergvein
extra-source-files:
  README.md
  CHANGELOG.md

flag examples
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.Localize.Dom
  build-depends:
      base                      >= 4.5      && < 4.15
    , containers
    , reflex                    >= 0.4      && < 0.9
    , reflex-dom                >= 0.6      && < 0.9
    , reflex-localize           >= 1.0      && < 1.2
    , text
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

executable reflex-localize-example
  hs-source-dirs: example
  if flag(examples)
    buildable: True
  else
    buildable: False
  main-is:             Main.hs
  other-modules:
    App.Language
    App.Localization
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , containers
    , raw-strings-qq
    , reflex
    , reflex-dom
    , reflex-localize
    , reflex-localize-dom
    , text

  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

source-repository head
  type: git
  location: https://github.com/hexresearch/ergvein
  subdir: reflex-localize
