name:                reflex-localize
version:             1.0.0.0
synopsis:            Localization library for reflex
description:         See README.md
stability:           Experimental
category:            Reflex, FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
build-type:          Simple
cabal-version:       >= 1.25
license:             MIT
license-file:        LICENSE
copyright:           2019 ATUM SOLUTIONS AG
author:
                     - Anton Gushcha
                     - Aminion
                     - Vladimir Krutkin
                     - Levon Oganyan
maintainer:          - Anton Gushcha <ncrashed@gmail.com>
                     - Aminion <>
                     - Vladimir Krutkin <krutkinvs@gmail.com>
                     - Levon Oganyan

library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.Localize
    Reflex.Localize.Class
    Reflex.Localize.Language
    Reflex.Localize.Monad
    Reflex.Localize.Trans
  build-depends:
      base
    , text
    , reflex                    >= 0.4      && < 0.7
    , reflex-dom                >= 0.4      && < 0.7
    , mtl
    , reflex-external-ref
    , jsaddle
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveDataTypeable
    DeriveGeneric
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances
