name:                reflex-dom-retractable
version:             0.1.0.0
synopsis:            Routing and retractable back button for
description:         Library that automates widget switches and back button retract stack. See README.md
Stability:           Experimental
category:            FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 Investment Solutions AG
author:              - Anton Gushcha
                     - Aminion
                     - Vladimir Krutkin
                     - Levon Oganyan
maintainer:          - Anton Gushcha <ncrashed@protonmail.com>
                     - Aminion <>
                     - Vladimir Krutkin <krutkinvs@gmail.com>
                     - Levon Oganyan <>
library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.Dom.Retractable
    Reflex.Dom.Retractable.Class
  build-depends:
      base
    , reflex            >= 0.4      && < 0.7
  default-language:    Haskell2010
