name:                reflex-dom-retractable
version:             0.1.0.0
synopsis:            Routing and retractable back button for reflex-dom
description:         Library that automates widget switches and back button retract stack. See README.md
Stability:           Experimental
category:            Reflex, FRP, Web, GUI, HTML, Javascript, Reactive, Reactivity, User Interfaces, User-interface
build-type:          Simple
cabal-version:       >=1.10
license:             MIT
license-file:        LICENSE
copyright:           2019 Investment Solutions AG
author:              Anton Gushcha, Aminion, Vladimir Krutkin, Levon Oganyan
maintainer:          Anton Gushcha <ncrashed@protonmail.com>, Vladimir Krutkin <krutkinvs@gmail.com>
extra-source-files:
  README.md
  CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:
    Reflex.Dom.Retractable
    Reflex.Dom.Retractable.Class
    Reflex.Dom.Retractable.Trans
    Reflex.Dom.Retractable.Trans.Internal
  build-depends:
      base                 >= 4.7      && < 4.12
    , containers           >= 0.5      && < 0.7
    , jsaddle              >= 0.9      && < 0.10
    , mtl                  >= 2.1      && < 2.3
    , reflex               >= 0.4      && < 0.7
    , reflex-dom           >= 0.4      && < 0.7
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances
